--- a/client/Panel/.eslintrc
+++ b/client/Panel/.eslintrc
@@ -10,6 +10,9 @@
     "browser": true, 
     "node": true 
   },
+  "parserOptions": {
+    "ecmaVersion": 2023
+  },
   "settings": {
     "react": {
       "version": "detect"
